--- a/x.css
+++ b/x.css
@@ -48,6 +48,9 @@
         #music {
             display: none;
         }
+        
+        
+        
         #next {
             font-size: 2.5em;
             position: absolute;
@@ -55,6 +58,10 @@
             top: 50%; /*js*/
             z-index: 10;
             display: none;
+        }
+        #next a {
+            background: rgba(0,0,0,0);
+            color: rgba(255,255,255,0.6);
         }
         #star {
             display: none;
