--- a/password/style.css
+++ b/password/style.css
@@ -49,6 +49,7 @@ a {
     text-align: center;
     font-family: InconsolataMedium;
     font-size: 18px;
+    text-shadow: 0 6px 6px #000;
 }
 
 #generate {
@@ -56,5 +57,60 @@ a {
     margin-left: 0;/*js*/
     left: 50%;
 }
+
+#generate[disabled="disabled"], #generate[disabled="disabled"] {
+    opacity: 0.1;
+}
+
+    #generate {
+
+        -moz-box-shadow: 0px 10px 14px -7px #000;
+        -webkit-box-shadow: 0px 10px 14px -7px #000;
+        box-shadow: 0px 10px 14px -7px #000;
+
+        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77b55a), color-stop(1, #72b352));
+        background:-moz-linear-gradient(top, #77b55a 5%, #72b352 100%);
+        background:-webkit-linear-gradient(top, #77b55a 5%, #72b352 100%);
+        background:-o-linear-gradient(top, #77b55a 5%, #72b352 100%);
+        background:-ms-linear-gradient(top, #77b55a 5%, #72b352 100%);
+        background:linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77b55a', endColorstr='#72b352',GradientType=0);
+
+        background-color:#77b55a;
+
+        -moz-border-radius:4px;
+        -webkit-border-radius:4px;
+        border-radius:4px;
+
+        border:1px solid #4b8f29;
+
+        display:inline-block;
+        color:#ffffff;
+        font-family:arial;
+        font-size:17px;
+        font-weight:bold;
+        padding:11px 27px;
+        text-decoration:none;
+
+        text-shadow:0px 1px 0px #5b8a3c;
+
+    }
+    #generate:hover {
+
+        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #72b352), color-stop(1, #77b55a));
+        background:-moz-linear-gradient(top, #72b352 5%, #77b55a 100%);
+        background:-webkit-linear-gradient(top, #72b352 5%, #77b55a 100%);
+        background:-o-linear-gradient(top, #72b352 5%, #77b55a 100%);
+        background:-ms-linear-gradient(top, #72b352 5%, #77b55a 100%);
+        background:linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#72b352', endColorstr='#77b55a',GradientType=0);
+
+        background-color:#72b352;
+    }
+    #generate:active {
+        position:relative;
+        top:1px;
+    }
+
 
 
