--- a/password/style.css
+++ b/password/style.css
@@ -41,6 +41,7 @@ a {
     #menu li {
         padding-bottom: 10px;
         display: inline;
+        text-shadow: 0px 4px 2px #000;
     }
     #menu a {
         text-decoration: none;
