PL4: Fixed styling for Extra Credit.

--- a/PL4/x.css
+++ b/PL4/x.css
@@ -52,7 +52,7 @@
             position: relative;
             left: 10px;
         }
-        #inputTip {
+        #inputTip, #inputTipEC {
             padding-bottom: 0px;
             padding-top: 0px;
             margin-bottom: 0px;
