--- a/public/stylesheets/password/style.css
+++ b/public/stylesheets/password/style.css
@@ -23,8 +23,8 @@ a {
 /*default font*/
 @font-face {
     font-family: 'InconsolataMedium';
-    src: url('../font/inconsolata-webfont.eot');
-    src: local('?'), url('../font/inconsolata-webfont.woff') format('woff'), url('../font/inconsolata-webfont.ttf') format('truetype'), url('../font/inconsolata-webfont.svgz#InconsolataMedium') format('svg'), url('../font/inconsolata-webfont.svg#InconsolataMedium') format('svg');
+    src: url('/fonts/inconsolata-webfont.eot');
+    src: local('?'), url('/fonts/inconsolata-webfont.woff') format('woff'), url('/fonts/inconsolata-webfont.ttf') format('truetype'), url('/fonts/inconsolata-webfont.svgz#InconsolataMedium') format('svg'), url('/fonts/inconsolata-webfont.svg#InconsolataMedium') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -35,9 +35,11 @@ a {
     margin-top: 50px;
     margin-left: 50px;
     list-style: none;
-    background: rgba(0,0,0,0.35);
+    background: rgba(0,0,0,0.8);
     display: block;
+    border-radius: 8px;
     font-size: 1.3rem;
+    text-transform: lowercase;
 }
     #menu li {
         padding-bottom: 10px;
