Calendar: Finished grid flip animation.

--- a/app/views/pages/home.html.ejs
+++ b/app/views/pages/home.html.ejs
@@ -19,6 +19,9 @@
                 <a target="_blank" href="/clobe">Clobe</a>
             </li><br />
             <li class="sub menuitem frame">
+                <a target="_blank" href="/calendar">Date Picker</a>
+            </li><br />
+            <li class="sub menuitem frame">
                 <a target="_blank" href="/password">Password Generator</a>
             </li><br />
             <li class="sub menuitem">
