--- a/app/views/pages/home.html.ejs
+++ b/app/views/pages/home.html.ejs
@@ -19,7 +19,7 @@
                 <a target="_blank" href="/clobe">Clobe</a>
             </li><br />
             <li class="sub menuitem frame">
-                <a target="_blank" href="/calendar">Date Picker</a>
+                <a target="_blank" href="/flipDiagonal">Diagonal Grid Flip</a>
             </li><br />
             <li class="sub menuitem frame">
                 <a target="_blank" href="/password">Password Generator</a>
