--- a/app/views/pages/calendar.html.ejs
+++ b/app/views/pages/calendar.html.ejs
@@ -18,7 +18,7 @@
               <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
             <![endif]-->
 
-        <link href='http://fonts.googleapis.com/css?family=Raleway:300,400,200,100' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Raleway:300,400,200,100' rel='stylesheet' type='text/css'>
         <style>
             #content {
                 padding: 40px;
