Added some licensing under MPL.

--- a/app/views/pages/flip_diagonal.html.ejs
+++ b/app/views/pages/flip_diagonal.html.ejs
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+    <!--
+       - This Source Code Form is subject to the terms of the Mozilla Public
+       - License, v. 2.0. If a copy of the MPL was not distributed with this
+       - file, You can obtain one at http://mozilla.org/MPL/2.0/.
+       -->
         <title><%= title %></title>
         <!--<link rel="stylesheet" href="/stylesheets/screen.css" />-->
         <link rel='stylesheet' type='text/css' href="https://famo.us/lib/famous/famous.css" />
@@ -43,6 +48,16 @@
         <script src="https://google.github.io/traceur-compiler/src/bootstrap.js"></script>
 
         <script type="module">
+
+            /*
+             * LICENSE
+             *
+             * This Source Code Form is subject to the terms of the Mozilla Public
+             * License, v. 2.0. If a copy of the MPL was not distributed with this
+             * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+             *
+             */
+
             var Engine = famous.core.Engine;
             var Modifier = famous.core.Modifier;
             var StateModifier = famous.modifiers.StateModifier;
