--- a/app/views/pages/password.html.ejs
+++ b/app/views/pages/password.html.ejs
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+    <!--
+       - This Source Code Form is subject to the terms of the Mozilla Public
+       - License, v. 2.0. If a copy of the MPL was not distributed with this
+       - file, You can obtain one at http://mozilla.org/MPL/2.0/.
+       -->
         <title><%= title %></title>
         <meta charset="utf8" />
         <link rel="stylesheet" href="/stylesheets/password/style.css" />
