Added a transparent outline to everything and translateZ+rotation to the body to see if it would enable anti-aliasing in FireFox.

--- a/app/views/pages/flip_diagonal.html.ejs
+++ b/app/views/pages/flip_diagonal.html.ejs
@@ -27,8 +27,11 @@
             }
             body {
                 font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+                transform: translateZ(1px) rotate(45deg);
             }
-
+            * {
+                outline: 1px solid transparent;
+            }
             a {
                 color: #00b7ff;
             }
