--- a/app/views/pages/password_required.html.ejs
+++ b/app/views/pages/password_required.html.ejs
@@ -17,13 +17,6 @@
         <link href="/vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" />
         <link href="/vendor/bootstrap-datepicker/css/datepicker3.css" rel="stylesheet" />
 
-        <!-- Tooltipster -->
-        <link href="/vendor/tooltipster/css/tooltipster.css" rel="stylesheet" />
-        <link href="/vendor/tooltipster/css/themes/tooltipster-punk.css" rel="stylesheet" />
-        <link href="/vendor/tooltipster/css/themes/tooltipster-noir.css" rel="stylesheet" />
-        <link href="/vendor/tooltipster/css/themes/tooltipster-light.css" rel="stylesheet" />
-        <link href="/vendor/tooltipster/css/themes/tooltipster-shadow.css" rel="stylesheet" />
-
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -85,72 +78,15 @@
             .uppercase {
                 text-transform: uppercase;
             }
-            .modal-body {
-                text-align: center;
-            }
             #closeModal {
                 position: relative;
                 top: -20px;
             }
-            #saveButton {
-                margin-left: 10px;
-            }
             .datepicker-inline {
                 margin: auto;
-                width: auto;
             }
-            .datepicker-switch {
-                font-family: 'Raleway', sans-serif;
-                font-size: 1.6em;
-            }
-            .datepicker .prev, .datepicker .next {
-                vertical-align: center;
-            }
-            .datepicker .prev:hover, .datepicker .next:hover {
-                background: none!important;
-            }
-            .datepicker .prev div, .datepicker .next div {
-                font-size: 1.4em;
-                font-family: 'Raleway', sans-serif;
-                line-height: 40px;
-                color: white;
-                text-align: center;
-                width; 40px;
-                height: 40px;
-                border-radius: 50%;
-                background: #4EA54E; /*green*/
-            }
-            .datepicker table {
-                width: 350px;
-                margin: auto;
-            }
-            .datepicker .day {
-                text-align: right;
-                vertical-align: bottom;
-                width: 50px;
-                height: 50px;
-                border: 1px solid gray;
-                border-radius: 0;
-                background: #eee!important;
-            }
-            .datepicker .old.day, .datepicker .new.day {
-                background: white!important;
-            }
-            .datepicker .active {
-                background: #4EA54E!important; /*green*/
-            }
-            .datepicker .bank-holiday:not(.old):not(.new) {
-                background: #CF3E3A!important; /*red*/
-                color: white!important;
-            }
-            .datepicker .month, .datepicker .year {
-                /*width: 50px;*/
-                height: 50px;
-                border: 1px solid gray;
-                border-radius: 0;
-            }
-            #datePicker {
-                margin-bottom: 20px;
+            #saveButton {
+                margin-left: 10px;
             }
         </style>
     </head>
@@ -180,9 +116,9 @@
                         <div class="col-lg-3"></div>
                         <div class="col-lg-6" style="text-align: center">
                             <div class="input-group">
-                                <input id="dateField" disabled="disabled" type="text" class="form-control" data-toggle="modal" data-target="#datePickerModal" />
+                                <input type="text" class="form-control" data-toggle="modal" data-target="#datePickerModal">
                                 <span class="input-group-btn">
-                                    <button id="chooseDate" class="btn btn-success uppercase" title="blah" data-toggle="modal" data-target="#datePickerModal" type="button">Choose Date</button>
+                                    <button id="chooseDate" class="btn btn-success uppercase" data-toggle="modal" data-target="#datePickerModal" type="button">Choose Date</button>
                                 </span>
                             </div><!-- /input-group -->
                         </div>
@@ -272,7 +208,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <button id="closeModal" type="button" class="close closeDatepicker" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        <button id="closeModal" type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 
                         <h4 class="modal-title" id="datePickerModalLabel">Select Date</h4>
                         <p>
@@ -281,125 +217,28 @@
 
                         <div id="datePicker"></div>
 
-                        <button type="button" class="btn btn-default closeDatepicker" data-dismiss="modal">Cancel</button>
-                        <button id="saveButton" type="button" class="btn btn-success disabled" data-dismiss="modal">Save changes</button>
+                        <button id="saveButton" type="button" class="btn btn-primary pull-right">Save changes</button>
+                        <button type="button" class="btn btn-default pull-right" data-dismiss="modal">Close</button>
                         <div class="clearfix"></div>
-                        <br />
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- jQuery (before Bootstrap) -->
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
         <script src="/vendor/jquery/dist/jquery.min.js"></script>
-        <script src="/vendor/tooltipster/js/jquery.tooltipster.min.js"></script>
-
-        <!-- Bootstrap  -->
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="/vendor/bootstrap/js/tooltip.js"></script>
         <script src="/vendor/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-
-        <!-- ZenPayroll -->
         <script>
             $(document).ready(function() {
-                var savedDate = null; // This holds the date the user has picked AND saved.
-                var currentlySelectedDate = null; // this holds the date the user has momentarily picked, but not necessarily saved.
-
-                var tooltipOptions = {
-                    //theme: 'tooltipster-punk',
-                    //theme: 'tooltipster-noir',
-                    //theme: 'tooltipster-light',
-                    //theme: 'tooltipster-shadow'
-                };
-
-                var datepickerOptions = {
-                    format: 'mm/dd/yyyy',
-                    daysOfWeekDisabled: [0,6], // disable weekends
-                    startDate: new Date(2014, 0, 1),
-                    endDate: new Date(2014, 11, 31),
-                    beforeShowDay: function(date) {
-                        // Disable 2014 Federal Bank Holidays:
-                        var classes = [];
-                        var enabled = true;
-                        var holidayName = "";
-                        var holidays = [
-                            // TODO: These are hard coded days, which will actually vary from year to year. We can calculate them instead of hard coding once per year.
-                            [0,  1 , "New Year's Day"], // Wednesday - January 1 -
-                            [0,  20, "Martin Luther King’s Birthday"], // Monday - January 20 - Martin Luther King’s Birthday
-                            [1,  17, "George Washington’s Birthday"], // Monday - February 17 - George Washington’s Birthday
-                            [4,  26, "Memorial Day"], // Monday - May 26 - Memorial Day
-                            [6,  4 , "Independence Day"], // Friday - July 4 - Independence Day
-                            [8,  1 , "Labor Day"], // Monday - September 1 - Labor Day
-                            [9,  13, "Columbus Day"], // Monday - October 13 - Columbus Day
-                            [10, 11, "Veterans Day"], // Tuesday - November 11 - Veterans Day
-                            [10, 27, "Thanksgiving Day"], // Thursday - November 27 - Thanksgiving Day
-                            [11, 25, "Christmas Day"]  // Thursday - December 25 - Christmas Day
-                        ];
-                        holidays.forEach(function(item, index) {
-                            if (date.getUTCMonth() == holidays[index][0] && date.getUTCDate() == holidays[index][1]) {
-                                holidayName = holidays[index][2];
-                                enabled = false;
-                                classes.push('disabled');
-                                classes.push('bank-holiday');
-                            }
-                        });
-
-                        return {
-                            enabled: enabled,
-                            classes: classes.join(' '),
-                            tooltip: enabled? false: 'Holiday: '+holidayName
-                        };
-                    }
-                };
-
-                var picker = $('#datePicker').datepicker(datepickerOptions);
-                $('.bank-holiday').tooltipster(tooltipOptions);
-
-                picker.on('changeDate', function(event) {
-                    currentlySelectedDate = picker.datepicker('getDate');
-                    $('#datePickerModal #saveButton').removeClass('disabled');
-                    $('.bank-holiday').tooltipster(tooltipOptions);
+                $('#datePicker').datepicker({
+                })
+                .on('changeDate', function(event) {
+                    console.log(event);
                 });
-                picker.on('changeMonth', function() {
-                    $('.bank-holiday').tooltipster(tooltipOptions);
-                });
-
-                $('#datePickerModal #saveButton').on('click', function() {
-                    if (currentlySelectedDate) { // save the currently selected date if there is one.
-                        console.log('saving the date.');
-                        savedDate = currentlySelectedDate;
-                        var formattedDate = picker.datepicker('getFormattedDate');
-                        $('#dateField').val(formattedDate).change();
-                        $('#datePickerModal #saveButton').addClass('disabled');
-                    }
-                });
-
-                $('#datePickerModal button.closeDatepicker').on('click', function() {
-
-                    // return the calendar back to it's state if the user didn't save.
-                    if (!savedDate) { // the state when no date has yet been picked.
-                        console.log('removing the picker');
-                        picker.datepicker('remove');
-                        picker = $('#datePicker').datepicker(datepickerOptions);
-                        $('#datePickerModal #saveButton').addClass('disabled');
-                        $('.bank-holiday').tooltipster(tooltipOptions);
-                    }
-                    else { // the state when a previous date was already saved.
-                        console.log('setting picker back to saved date.');
-                        picker.datepicker('setDate', savedDate);
-                        $('.bank-holiday').tooltipster(tooltipOptions);
-                    }
-                });
-
-                $('.datepicker .prev, .datepicker .next').on('click', function() {
-                    setTimeout(function() {
-                        // FIXME: expose an event from Datepicker for when the user
-                        // has switched month views using the previous and next
-                        // buttons so we don't have to use this nasty setTimeout..
-                        $('.bank-holiday').tooltipster(tooltipOptions);
-                    }, 100);
-                });
-
+                console.log('hello');
             });
         </script>
     </body>
