Moved js and css to their own files.

--- a/app/views/pages/calendar.html.ejs
+++ b/app/views/pages/calendar.html.ejs
@@ -32,127 +32,7 @@
             <![endif]-->
 
         <link href='https://fonts.googleapis.com/css?family=Raleway:300,400,200,100' rel='stylesheet' type='text/css'>
-        <style>
-            :focus, :active {
-                outline: none!important;
-            }
-            #content {
-                padding: 40px;
-            }
-            #title {
-                padding-bottom: 40px;
-            }
-            #title h1, #datePickerModal h4 {
-                font-family: 'Raleway', sans-serif;
-                font-weight: 200!important;
-                font-size: 3.5em!important;
-            }
-            #callout {
-                padding-bottom: 60px;
-                color: #6e6e6e;
-            }
-            #select {
-                padding-bottom: 40px;
-            }
-            #featured {
-                padding-top: 40px;
-            }
-            #featured h5 {
-                letter-spacing: 0.2em;
-                font-weight: bold;
-            }
-            #featured p {
-                color: #6e6e6e;
-            }
-            #featured hr {
-                margin-top: 5px;
-                border-color: #dadada;
-                border-top-width: 1px;
-                border-bottom-width: 1px;
-            }
-            #select input, button {
-                height: 48px;
-            }
-            #select button {
-                padding-left: 40px;
-                padding-right: 40px;
-            }
-            .container {
-            }
-            .dashedBorder {
-                border-style: dashed;
-            }
-            .uppercase {
-                text-transform: uppercase;
-            }
-            .modal-body {
-                text-align: center;
-            }
-            #closeModal {
-                position: relative;
-                top: -20px;
-            }
-            #saveButton {
-                margin-left: 10px;
-            }
-            .datepicker-inline {
-                margin: auto;
-                width: auto;
-            }
-            .datepicker-switch {
-                font-family: 'Raleway', sans-serif;
-                font-size: 1.6em;
-            }
-            .datepicker .prev, .datepicker .next {
-                vertical-align: center;
-            }
-            .datepicker .prev:hover, .datepicker .next:hover {
-                background: none!important;
-            }
-            .datepicker .prev div, .datepicker .next div {
-                font-size: 1.4em;
-                font-family: 'Raleway', sans-serif;
-                line-height: 40px;
-                color: white;
-                text-align: center;
-                width; 40px;
-                height: 40px;
-                border-radius: 50%;
-                background: #4EA54E; /*green*/
-            }
-            .datepicker table {
-                width: 350px;
-                margin: auto;
-            }
-            .datepicker .day {
-                text-align: right;
-                vertical-align: bottom;
-                width: 50px;
-                height: 50px;
-                border: 1px solid gray;
-                border-radius: 0;
-                background: #eee!important;
-            }
-            .datepicker .old.day, .datepicker .new.day {
-                background: white!important;
-            }
-            .datepicker .active {
-                background: #4EA54E!important; /*green*/
-            }
-            .datepicker .bank-holiday:not(.old):not(.new) {
-                background: #CF3E3A!important; /*red*/
-                color: white!important;
-            }
-            .datepicker .month, .datepicker .year {
-                /*width: 50px;*/
-                height: 50px;
-                border: 1px solid gray;
-                border-radius: 0;
-            }
-            #datePicker {
-                margin-bottom: 20px;
-            }
-        </style>
+        <link href="/stylesheets/calendar/main.css" rel="stylesheet" />
     </head>
     <body>
         <div id="content">
@@ -300,107 +180,6 @@
         <script src="/vendor/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
 
         <!-- ZenPayroll -->
-        <script>
-            $(document).ready(function() {
-                var savedDate = null; // This holds the date the user has picked AND saved.
-                var currentlySelectedDate = null; // this holds the date the user has momentarily picked, but not necessarily saved.
-
-                var tooltipOptions = {
-                    //theme: 'tooltipster-punk',
-                    //theme: 'tooltipster-noir',
-                    //theme: 'tooltipster-light',
-                    //theme: 'tooltipster-shadow'
-                };
-
-                var datepickerOptions = {
-                    format: 'mm/dd/yyyy',
-                    daysOfWeekDisabled: [0,6], // disable weekends
-                    startDate: new Date(2014, 0, 1),
-                    endDate: new Date(2014, 11, 31),
-                    beforeShowDay: function(date) {
-                        // Disable 2014 Federal Bank Holidays:
-                        var classes = [];
-                        var enabled = true;
-                        var holidayName = "";
-                        var holidays = [
-                            // TODO: These are hard coded days, which will actually vary from year to year. We can calculate them instead of hard coding once per year.
-                            [0,  1 , "New Year's Day"], // Wednesday - January 1 -
-                            [0,  20, "Martin Luther King’s Birthday"], // Monday - January 20 - Martin Luther King’s Birthday
-                            [1,  17, "George Washington’s Birthday"], // Monday - February 17 - George Washington’s Birthday
-                            [4,  26, "Memorial Day"], // Monday - May 26 - Memorial Day
-                            [6,  4 , "Independence Day"], // Friday - July 4 - Independence Day
-                            [8,  1 , "Labor Day"], // Monday - September 1 - Labor Day
-                            [9,  13, "Columbus Day"], // Monday - October 13 - Columbus Day
-                            [10, 11, "Veterans Day"], // Tuesday - November 11 - Veterans Day
-                            [10, 27, "Thanksgiving Day"], // Thursday - November 27 - Thanksgiving Day
-                            [11, 25, "Christmas Day"]  // Thursday - December 25 - Christmas Day
-                        ];
-                        holidays.forEach(function(item, index) {
-                            if (date.getUTCMonth() == holidays[index][0] && date.getUTCDate() == holidays[index][1]) {
-                                holidayName = holidays[index][2];
-                                enabled = false;
-                                classes.push('disabled');
-                                classes.push('bank-holiday');
-                            }
-                        });
-
-                        return {
-                            enabled: enabled,
-                            classes: classes.join(' '),
-                            tooltip: enabled? false: 'Holiday: '+holidayName
-                        };
-                    }
-                };
-
-                var picker = $('#datePicker').datepicker(datepickerOptions);
-                $('.bank-holiday').tooltipster(tooltipOptions);
-
-                picker.on('changeDate', function(event) {
-                    currentlySelectedDate = picker.datepicker('getDate');
-                    $('#datePickerModal #saveButton').removeClass('disabled');
-                    $('.bank-holiday').tooltipster(tooltipOptions);
-                });
-                picker.on('changeMonth', function() {
-                    $('.bank-holiday').tooltipster(tooltipOptions);
-                });
-
-                $('#datePickerModal #saveButton').on('click', function() {
-                    if (currentlySelectedDate) { // save the currently selected date if there is one.
-                        console.log('saving the date.');
-                        savedDate = currentlySelectedDate;
-                        var formattedDate = picker.datepicker('getFormattedDate');
-                        $('#dateField').val(formattedDate).change();
-                        $('#datePickerModal #saveButton').addClass('disabled');
-                    }
-                });
-
-                $('#datePickerModal button.closeDatepicker').on('click', function() {
-
-                    // return the calendar back to it's state if the user didn't save.
-                    if (!savedDate) { // the state when no date has yet been picked.
-                        console.log('removing the picker');
-                        picker.datepicker('remove');
-                        picker = $('#datePicker').datepicker(datepickerOptions);
-                        $('#datePickerModal #saveButton').addClass('disabled');
-                        $('.bank-holiday').tooltipster(tooltipOptions);
-                    }
-                    else { // the state when a previous date was already saved.
-                        console.log('setting picker back to saved date.');
-                        picker.datepicker('setDate', savedDate);
-                        $('.bank-holiday').tooltipster(tooltipOptions);
-                    }
-                });
-
-                $('.datepicker .prev, .datepicker .next').on('click', function() {
-                    setTimeout(function() {
-                        // FIXME: expose an event from Datepicker for when the user
-                        // has switched month views using the previous and next
-                        // buttons so we don't have to use this nasty setTimeout..
-                        $('.bank-holiday').tooltipster(tooltipOptions);
-                    }, 100);
-                });
-
-            });
-        </script>
+        <script src="/javascripts/calendar/main.js"></script>
     </body>
 </html>
