Added links to 3rd party libs.

--- a/app/views/pages/calendar.html.ejs
+++ b/app/views/pages/calendar.html.ejs
@@ -172,11 +172,13 @@
 
         <!-- jQuery (before Bootstrap) -->
         <script src="/vendor/jquery/dist/jquery.min.js"></script>
+        <!-- Tooltipster: http://iamceege.github.io/tooltipster -->
         <script src="/vendor/tooltipster/js/jquery.tooltipster.min.js"></script>
 
         <!-- Bootstrap  -->
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="/vendor/bootstrap/js/tooltip.js"></script>
+        <!-- Bootstrap Datepicker: http://bootstrap-datepicker.readthedocs.org -->
         <script src="/vendor/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
 
         <!-- ZenPayroll -->
