--- a/app/views/pages/home.html.ejs
+++ b/app/views/pages/home.html.ejs
@@ -27,6 +27,9 @@
                 <a target="_blank" href="/flipDiagonal">Diagonal Grid Flip</a>
             </li><br />
             <li class="sub menuitem frame">
+                <a target="_blank" href="/calendar">Calendar Picker</a>
+            </li><br />
+            <li class="sub menuitem frame">
                 <a target="_blank" href="/password">Password Generator</a>
             </li><br />
             <li class="sub menuitem">
