--- a/app/views/pages/flip_diagonal.html.ejs
+++ b/app/views/pages/flip_diagonal.html.ejs
@@ -49,7 +49,8 @@
         <script src='jspm_config.js'></script>
         <script type="module">
             System.map['famous'] = 'party/bower/famous';
-            System.import('javascripts/flipDiagonal/main').then(m => {}, error => {
+            System.paths['js/*'] = 'javascripts/*/main.js';
+            System.import('js/flipDiagonal').then(m => {}, error => {
                 console.error(error.stack);
             });
         </script>
