Jspm no longer uses version numbers for the initial scripts. How convenient.

--- a/app/views/pages/flip_diagonal.html.ejs
+++ b/app/views/pages/flip_diagonal.html.ejs
@@ -44,8 +44,8 @@
         </style>
     </head>
     <body>
-        <script src='/party/jspm/traceur@0.0.58.js'></script>
-        <script src='/party/jspm/system@0.8.js'></script>
+        <script src='/party/jspm/traceur.js'></script>
+        <script src='/party/jspm/system.js'></script>
         <script src='jspm_config.js'></script>
         <script type="module">
             System.map['famous'] = 'party/bower/famous';
