--- a/app/views/pages/flip_diagonal.html.ejs
+++ b/app/views/pages/flip_diagonal.html.ejs
@@ -44,11 +44,11 @@
         </style>
     </head>
     <body>
-        <script src='/party/jspm/traceur.js'></script>
-        <script src='/party/jspm/system.js'></script>
+        <script src='/party/jspm/traceur.src.js'></script>
+        <script src='/party/jspm/es6-module-loader.src.js'></script>
+        <script src='/party/jspm/system.src.js'></script>
         <script src='jspm_config.js'></script>
         <script type="module">
-            System.map['famous'] = 'party/bower/famous';
             System.paths['js/*'] = 'javascripts/*/main.js';
             System.import('js/flipDiagonal').then(m => {}, error => {
                 console.error(error.stack);
