Password reveal: Finished initial concept.

--- a/app/views/pages/password_reveal.html.ejs
+++ b/app/views/pages/password_reveal.html.ejs
@@ -23,7 +23,7 @@
                 height: 100%;
                 width: 100%;
                 position: relative;
-                background-color: #f2ecdc;
+                background-color: white;
             }
             body {
                 font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -38,8 +38,8 @@
             }
 
             /* specific */
-            .leaflet-control-zoom, .leaflet-control-attribution {
-                display: none;
+            .passwordBox input, .passwordBox button {
+                margin-bottom: 5px
             }
         </style>
     </head>
